<resources>
    <string name="app_name">API Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title">title</string>
    <string name="genre">genre</string>
    <string name="episodeNumber">episode number</string>
    <string name="animeTitle">Title</string>
    <string name="animeGenre">Genre</string>
    <string name="animeSynopsis">Synopsis</string>
    <string name="animeEpisodes">episodes</string>
    <string name="animeProducer">Producer</string>
    <string name="animeSeasonAired">Season aired</string>
    <string name="animeMalScore">score</string>
</resources>
