<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_listview_titlecard"
        android:layout_width="136dp"
        android:layout_height="183dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_listview_genre"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/genre"
        app:layout_constraintStart_toEndOf="@+id/imageView_listview_titlecard"
        app:layout_constraintTop_toBottomOf="@+id/textView_listview_title" />

    <TextView
        android:id="@+id/textView_listview_title"
        android:layout_width="231dp"
        android:layout_height="101dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/imageView_listview_titlecard"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_listview_epnum"
        android:layout_width="73dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/episodeNumber"
        app:layout_constraintStart_toEndOf="@+id/textView_listview_genre"
        app:layout_constraintTop_toBottomOf="@+id/textView_listview_title" />
</androidx.constraintlayout.widget.ConstraintLayout>